New ConfirmReservationHandler and bugfixes (#3)
